# photo-grouper

./: .editorconfig  .gitignore  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  idea.md  photo_grouper_design.md  pyproject.toml  requirements.txt
.github/: README-ACTIONS.md
.github/scripts/: compress-artifact.sh  deploy-web.sh  upload-to-r2.sh  verify-downloads.sh
.github/workflows/: build-desktop.yml  deploy-web.yml
core/: embedder.py  grouper.py  select_session.py
core/models/: __init__.py  base_model.py  resnet18_model.py  vgg16_model.py
infra/: cache_db.py
ui/: cluster_dialog.py  preview_panel.py  select_session_dialog.py  selected_view_dialog.py  session_launcher.py
ui/components/: layouts.py
ui/utils/: image_preloader.py  image_utils.py
ui/views/: __init__.py  grouped_photos_view.py  selected_photos_view.py
utils/: preferences.py
windows/: main_window.py
