[project]
name = "photo-grouper"
version = "0.1.0"
description = "this is a photo grouper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=23.0.0",
    "faiss-cpu>=1.7.4",
    "ipykernel>=6.30.1",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pillow-heif>=0.13.0",
    "pyside6>=6.5.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.13.2",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "watchdog>=3.0.0",
]

[dependency-groups]
dev = [
    "tqdm>=4.67.1",
]
